# chess-ai

./: .gitignore  chess_value_model.pth  download_training_data.sh  pyproject.toml
chess_ai/: AsyncChessMCTS.py  AsyncPredictDataLoader.py  ChessDataset.py  ChessMCTS.py  ChessModel.py  ChessValueModel.py  ModelPredictActor.py  State.py  chess_players.py  estimate_model_level.py  logcfg.py  play_vs_stockfish.py  preprocess_data.py  self_play.py  train.py  train_alphazero.py
chess_ai/data/: ChessDataset.py  SelfPlayDataset.py  SelfPlayGameActor.py  SelfPlayGamesManagerActor.py  TrainingSample.py  parse_pgn_training_samples.py
chess_ai/translation/: Action.py  BoardWrapper.py  InputState.py  board_helpers.py  find_move_from_action_coord.py  model_output_to_chess_move.py  utils.py
tests/: test_Action.py  test_AsyncChessMCTS.py  test_ChessDataset.py  test_ChessMCTS.py  test_ChessModel.py  test_InputState.py  test_SelfPlayDataset.py  test_State.py  test_chess_ai.py
